# app_template

./: README.md  gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: file_log.db
src/app/: db.py  file_handler.py  main.py
uploads/: README.md
