[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andreas"]
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.45.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
sqlite-utils = "^3.38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
